Fix logo size on mobile

--- a/news/css/style.css
+++ b/news/css/style.css
@@ -309,6 +309,10 @@ a {
     #progress-bars {
         margin-left: 0.5rem;
     }
+
+    #logo {
+        height: 9.6rem;
+    }
 }
 
 
